feature/profile-pic/ 프록시 서비스가 sse 이벤트를 수신할 수 있게 추가